# fermi-prob-prog

./: .gitignore  README.md  generate_counterfactuals.py  pyproject.toml  simulate.py  train_generative.py
analysis/: checkll.ipynb  cmp_nptfit.ipynb  coverage.py  fit.ipynb  fit.py  fit_calibration.py  fit_cmp.py  fit_fermi.py  fit_fermi_svi_process.py  fit_oaf.py  fit_pois.py  hmc.ipynb  hmc_init.ipynb  note.txt  production_gce_shape.ipynb  production_mixture.ipynb  production_posteriors.ipynb  production_svi_process.ipynb  pt.ipynb  scaling.ipynb  simulate.py  submit.sh  submit_cmp.sh  test.ipynb  test_map_fit.ipynb  view.ipynb
cross_check/: 0_get_templates_573.ipynb  0_process_templates_573.ipynb  1_get_templates_Jun19.ipynb  1_poisson_fit.ipynb  1_process_templates.ipynb  2_get_counts_exposure.ipynb  2_poisson_fit.ipynb  3_process_templates.ipynb  4_poisson_fit.ipynb  check_to_cart.ipynb  common.py  cross_check.ipynb  make_data.py  model_output.ipynb  nptf_underflow.ipynb  old.ipynb
data/: counts_downsampled.npy  data.ipynb  download_ebin.sh
ebin_analysis/: 1_make_data_templates.ipynb  2_fit.ipynb
examples/: 1_fitting_to_data.ipynb  1_test_fit_to_data.ipynb  2_customizing_model.ipynb  3_simulation.ipynb  fit_to_fermi.ipynb  fit_to_fermi_small.ipynb  fit_to_simulation.ipynb
fermi_data_processing/: base.xml  cross_check.ipynb  gtsrcmaps_573weeks.sh  gtsrcmaps_718weeks.sh  gtsrcmaps_single.sh  pre_process_CZMS.py  run_CZMS_base.sh
likelihoods/: ll.ipynb  npll_jax.py  npll_jax_1b.py  npll_jax_2.py  npll_jax_new.py  npll_torch.py
models/: bulge_models.py  (+29 more)
(+290 files in other folders)
