[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fpp"
version = "0.0.0.20260312"
readme = "README.md"
description = "Fermi Probalistic Programming"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "jax",
    "jaxlib",
    "numpyro",
    "optax",
    "healpy",
    "scipy",
    "matplotlib",
    "dill",
    "tqdm",
    "einops",
    "arviz>=0.23,<1.0",
    "corner",
    "astropy",
    "reproject",
    "ipykernel",
]

[project.urls]
Homepage = "https://github.com/smsharma/fermi-prob-prog"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["fpp", "fpp.*"]